--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DB_CONNECTION_STRING=mongodb+srv://sarlcazaletjp:cYLWUQH0uupizni9@locations.6bemqwj.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
+ADMIN_USERNAME=adminCazalet
+ADMIN_PASSWORD=ToutCurageArudy*$
+ACCESS_TOKEN_SECRET=your_access_token_secret
+
