--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.6.1",
+    "multer": "^1.4.4-lts.1",
+    "multer-gridfs-storage": "^4.0.2",
+    "nodemon": "^3.0.1"
   }
 }
